# signal-converters-notebooks

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: Conversores_Sinal_B_2023.ppsx  ~$Conversores_Sinal_B_2023.ppsx
practical_classes/: fft.py  pc1.ipynb  pc2.ipynb  practical_class_1.ipynb  practical_class_10.ipynb  practical_class_2.ipynb  practical_class_3.ipynb  practical_class_4.ipynb  practical_class_5.ipynb  practical_class_6.ipynb  practical_class_7.ipynb  practical_class_8.ipynb  practical_class_9.ipynb  practical_classes_2.ipynb  project_1.ipynb  project_1_loopunrolled_pipeline_sar_adc.ipynb  utils.py
src/signal_converters_notebooks/: __init__.py
src/signal_converters_notebooks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
