[tool.poetry]
name = "sc_practical_classes"
version = "0.1.0"
license = "MIT"
description = "A compilation of notes, modelling exercises and practical course work for the course of Signal Converters of the Electrical and Computers Eng. Dep. of NOVA University of Lisbon."
authors = ["das-dias <das.dias6@gmail.com>"]
readme = "README.md"
packages = [{include = "pratical_classes"}]


[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
