[tool.poetry]
name = "sc_practical_classes"
version = "0.1.0"
license = "MIT"
description = "A compilation of notes, modelling exercises and practical course work for the course of Signal Converters of the Electrical and Computers Eng. Dep. of NOVA University of Lisbon."
authors = ["das-dias <das.dias6@gmail.com>"]
readme = "README.md"
packages = [{include = "pratical_classes"}]


[tool.poetry.dependencies]
python = "<3.12,>=3.8"
numpy = "^1.24.2"
scipy = "^1.10.1"
seaborn = "^0.12.2"


[tool.poetry.dev-dependencies]
ipykernel = "^6.22.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
