[project]
name = "signal-converters-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dasdias", email = "das.dias6@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scienceplots>=2.1.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
